@@ -1,5 +1,9 @@
 PHORONIX TEST SUITE CHANGE-LOG
 
+Phoronix Test Suite (Git)
+
+- pts-core: Don't preserve really large system logs (~1MB or greater)
+
 Phoronix Test Suite 6.6.1
 29 September 2016
 
